--- a/app/assets/stylesheets/components/dashboard.css.scss
+++ b/app/assets/stylesheets/components/dashboard.css.scss
@@ -23,7 +23,7 @@
       opacity: 0.2;
       text-align: center;
 
-      .fa {
+      .fa, .oi {
         font-size: 70px;
       }
     }
